--- a/src/Blazor.Server.UI/Pages/TripReports/TripReports.razor
+++ b/src/Blazor.Server.UI/Pages/TripReports/TripReports.razor
@@ -164,7 +164,12 @@
         <PropertyColumn Property="x => x.OnBoard" Title="@L[_currentDto.GetMemberDescription(x=>x.OnBoard)]" />
         <PropertyColumn Property="x => x.NotOnBoard" Title="@L[_currentDto.GetMemberDescription(x=>x.NotOnBoard)]" />
         <PropertyColumn Property="x => x.DepartureDate" Title="@L[_currentDto.GetMemberDescription(x=>x.DepartureDate)]" />
-        <PropertyColumn Property="x => x.Comments" Title="@L[_currentDto.GetMemberDescription(x=>x.Comments)]" />
+        <PropertyColumn Property="x => x.Status" Title="@L[_currentDto.GetMemberDescription(x=>x.Status)]">
+             <CellTemplate>
+            <MudText Typo="Typo.body2">@context.Item.Status</MudText>
+            <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.Comments</MudText>
+            </CellTemplate>
+        </PropertyColumn>
         @if (UserProfile.IsSuperAdmin)
         {
             <PropertyColumn Property="x => x.Tenant" Title="@L[_currentDto.GetMemberDescription(x=>x.Tenant)]">
