--- a/src/Blazor.Server.UI/Pages/Index.razor
+++ b/src/Blazor.Server.UI/Pages/Index.razor
@@ -24,7 +24,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.Castle" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalSchools</h2>
-                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">School</p>
+                    <p class="mud-text-secondary">School</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -33,7 +33,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalBuses</h2>
-                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Bus</p>
+                    <p class="mud-text-secondary">Bus</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -42,7 +42,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.FollowTheSigns" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalPilots</h2>
-                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Pilot</p>
+                    <p class="mud-text-secondary">Pilot</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -51,7 +51,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.LinearScale" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalItineraries</h2>
-                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Itinerary</p>
+                    <p class="mud-text-secondary">Itinerary</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -60,7 +60,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.Groups" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalStudents</h2>
-                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Student</p>
+                    <p class="mud-text-secondary">Student</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -69,7 +69,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.EscalatorWarning" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalParents</h2>
-                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Parent</p>
+                    <p class="mud-text-secondary">Parent</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -78,7 +78,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.History" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalTransportLogs</h2>
-                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Transport Logs</p>
+                    <p class="mud-text-secondary">Transport Logs</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -87,7 +87,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.AirplaneTicket" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalReports</h2>
-                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Trip Reports</p>
+                    <p class="mud-text-secondary">Trip Reports</p>
                 </div>
             </MudPaper>
         </MudItem>
