--- a/src/Blazor.Server.UI/Pages/Pilots/TravelCard.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/TravelCard.razor
@@ -20,7 +20,7 @@
         </CardHeaderAvatar>
         <CardHeaderContent>
             <MudText Typo="Typo.body2">@Itinerary.Pilot.DisplayName</MudText>
-            <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@Itinerary.Pilot.Phone</MudText>
+            <MudText Typo="Typo.body2" Class="mud-text-secondary">@Itinerary.Pilot.Phone</MudText>
         </CardHeaderContent>
         <CardHeaderActions>
             <MudIconButton Icon="@Icons.Material.Filled.Coronavirus" OnClick="OnClick" Color="Color.Primary" />
