--- a/src/Blazor.Server.UI/Pages/Buses/Buses.razor
+++ b/src/Blazor.Server.UI/Pages/Buses/Buses.razor
@@ -187,7 +187,7 @@
             <CellTemplate>
                 <div class="d-flex flex-column">
                     <MudText Typo="Typo.body2">@context.Item.PlatNumber</MudText>
-                    <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.Description</MudText>
+                    <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.Description</MudText>
                </div>
             </CellTemplate>
         </PropertyColumn>
@@ -195,7 +195,7 @@
             <CellTemplate>
                 <div class="d-flex flex-column">
                     <MudText Typo="Typo.body2">@context.Item.Status</MudText>
-                    <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.DeviceId</MudText>
+                    <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.DeviceId</MudText>
                 </div>
             </CellTemplate>
         </PropertyColumn>
@@ -205,7 +205,7 @@
                 <CellTemplate>
                     <div class="d-flex flex-column">
                         <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
-                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.TenantId</MudText>
+                        <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.TenantId</MudText>
                     </div>
                 </CellTemplate>
             </PropertyColumn>
