--- a/src/Blazor.Server.UI/Pages/Students/Students.razor
+++ b/src/Blazor.Server.UI/Pages/Students/Students.razor
@@ -208,7 +208,7 @@
                 </MudAvatar>
                 <div class="ml-2">
                     <MudText Typo="Typo.body2">@context.Item.DisplayName</MudText>
-                    <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.UID</MudText>
+                    <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.UID</MudText>
                    
                 </div>
             </CellTemplate>
@@ -217,7 +217,7 @@
             <CellTemplate>
                 <div class="d-flex flex-column">
                     <MudText Typo="Typo.body2">@context.Item.Itinerary?.Name</MudText>
-                    <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.Itinerary?.Bus.PlatNumber</MudText>
+                    <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.Itinerary?.Bus.PlatNumber</MudText>
                 </div>
             </CellTemplate>
         </PropertyColumn>
@@ -249,7 +249,7 @@
                 <CellTemplate>
                     <div class="d-flex flex-column">
                         <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
-                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.TenantId</MudText>
+                        <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.TenantId</MudText>
                     </div>
                 </CellTemplate>
             </PropertyColumn>
@@ -285,7 +285,7 @@
                         <MudImage Src="@StudentInfo.ProfilePicture"></MudImage>
                     </MudAvatar>
                     <div class="d-flex flex-column align-self-center flex-grow-1 ml-2">
-                        <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@StudentInfo.School.Name</p>
+                        <p class="mud-text-secondary">@StudentInfo.School.Name</p>
                         <p>@StudentInfo.DisplayName</p>
                     </div>
                     </div>
