--- a/src/Blazor.Server.UI/Pages/TransportLogs/TransportLogs.razor
+++ b/src/Blazor.Server.UI/Pages/TransportLogs/TransportLogs.razor
@@ -151,7 +151,7 @@
                 </MudAvatar>
                 <div class="ml-2">
                     <MudText Typo="Typo.body2">@context.Item.Student.DisplayName</MudText>
-                    <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.Student.UID</MudText>
+                    <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.Student.UID</MudText>
                    
                 </div>
             </CellTemplate>
@@ -172,7 +172,7 @@
                 <CellTemplate>
                     <div class="d-flex flex-column">
                         <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
-                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.TenantId</MudText>
+                        <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.TenantId</MudText>
                     </div>
                 </CellTemplate>
             </PropertyColumn>
