--- a/src/Blazor.Server.UI/Pages/TripReports/MyTrip.razor
+++ b/src/Blazor.Server.UI/Pages/TripReports/MyTrip.razor
@@ -22,12 +22,12 @@
                         </MudTooltip>
                        
                         <div class="d-flex flex-column ml-2 flex-grow-1">
-                            <MudText Typo="Typo.body2"> Coal Road - Bluff Street </MudText>
-                            <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")"> Time: 7:00 - 9:00 </MudText>
+                            <MudText Typo="Typo.body2" Class="mud-text-primary"> Coal Road - Bluff Street </MudText>
+                            <MudText Typo="Typo.body2" Class="mud-text-secondary"> Time: 7:00 - 9:00 </MudText>
                         </div>
                         <div class="d-flex flex-column ml-2 align-center justify-center">
                             <MudText Typo="Typo.body2"> On Board </MudText>
-                            <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")"> 10 </MudText>
+                            <MudText Typo="Typo.body2" Class="mud-text-secondary"> 10 </MudText>
                         </div>
                     </div>
                     
@@ -40,12 +40,12 @@
                                 <MudIcon Icon="@Icons.Material.Filled.TagFaces" Color="Color.Success" Size="Size.Large"></MudIcon>
                             </MudTooltip>
                             <div class="d-flex flex-column ml-2 flex-grow-1">
-                                <MudText Typo="Typo.body2"> Coal Road - Bluff Street </MudText>
-                                <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")"> Time: 7:00 - 9:00 </MudText>
+                                <MudText Typo="Typo.body2" Class="mud-text-primary"> Coal Road - Bluff Street </MudText>
+                                <MudText Typo="Typo.body2" Class="mud-text-secondary"> Time: 7:00 - 9:00 </MudText>
                             </div>
                             <div class="d-flex flex-column ml-2 align-center justify-center">
                                 <MudText Typo="Typo.body2"> On Board </MudText>
-                                <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")"> 10 </MudText>
+                                <MudText Typo="Typo.body2" Class="mud-text-secondary"> 10 </MudText>
                             </div>
                         </div>
 
@@ -57,11 +57,11 @@
                         </MudTooltip>
                         <div class="d-flex flex-column ml-2 flex-grow-1">
                             <MudText Typo="Typo.body2"> Coal Road - Bluff Street </MudText>
-                            <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")"> Time: 7:00 - 9:00 </MudText>
+                            <MudText Typo="Typo.body2" Class="mud-text-secondary"> Time: 7:00 - 9:00 </MudText>
                         </div>
                         <div class="d-flex flex-column ml-2 align-center justify-center">
                             <MudText Typo="Typo.body2"> On Board </MudText>
-                            <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")"> 10 </MudText>
+                            <MudText Typo="Typo.body2" Class="mud-text-secondary"> 10 </MudText>
                         </div>
                     </div>
 
