--- a/src/Blazor.Server.UI/Pages/TripReports/TripReports.razor
+++ b/src/Blazor.Server.UI/Pages/TripReports/TripReports.razor
@@ -140,7 +140,7 @@
         <PropertyColumn Property="x => x.Itinerary" Title="@L[_currentDto.GetMemberDescription(x=>x.Itinerary)]">
             <CellTemplate>
                 <MudText Typo="Typo.body2">@context.Item.Itinerary?.Name</MudText>
-                <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.PlatNumber</MudText>
+                <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.PlatNumber</MudText>
             </CellTemplate>
         </PropertyColumn>
         <PropertyColumn Property="x => x.Pilot" Title="@L[_currentDto.GetMemberDescription(x=>x.Pilot)]" CellClass="d-flex align-items-center">
@@ -157,7 +157,7 @@
                 </MudAvatar>
                 <div class="ml-2">
                     <MudText Typo="Typo.body2">@context.Item.Pilot?.DisplayName</MudText>
-                    <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.Pilot?.Phone</MudText>
+                    <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.Pilot?.Phone</MudText>
                 </div>
             </CellTemplate>
         </PropertyColumn>
@@ -167,7 +167,7 @@
         <PropertyColumn Property="x => x.Status" Title="@L[_currentDto.GetMemberDescription(x=>x.Status)]">
              <CellTemplate>
             <MudText Typo="Typo.body2">@context.Item.Status</MudText>
-            <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.Comments</MudText>
+            <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.Comments</MudText>
             </CellTemplate>
         </PropertyColumn>
         @if (UserProfile.IsSuperAdmin)
@@ -176,7 +176,7 @@
                 <CellTemplate>
                     <div class="d-flex flex-column">
                         <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
-                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.TenantId</MudText>
+                        <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.TenantId</MudText>
                     </div>
                 </CellTemplate>
             </PropertyColumn>
