--- a/src/Blazor.Server.UI/Pages/TransportLogs/TransportLogs.razor
+++ b/src/Blazor.Server.UI/Pages/TransportLogs/TransportLogs.razor
@@ -2,9 +2,10 @@
 
 @using BlazorDownloadFile
 @using CleanArchitecture.Blazor.Application.Features.TransportLogs.Caching
+@using CleanArchitecture.Blazor.Application.Features.TransportLogs.Commands.Delete;
 @using CleanArchitecture.Blazor.Application.Features.TransportLogs.DTOs
 @using CleanArchitecture.Blazor.Application.Features.TransportLogs.Specifications
-@using CleanArchitecture.Blazor.Application.Features.TransportLogs.Commands.Delete
+@using CleanArchitecture.Blazor.Application.Features.TransportLogs.Commands.Checkout
 @using CleanArchitecture.Blazor.Application.Features.TransportLogs.Queries.Pagination
 @using CleanArchitecture.Blazor.Application.Features.TransportLogs.Commands.AddEdit
 
