--- a/src/Blazor.Server.UI/Pages/TripReports/MyTrip.razor
+++ b/src/Blazor.Server.UI/Pages/TripReports/MyTrip.razor
@@ -1,71 +1,40 @@
 ﻿@inject IStringLocalizer<TripReports> L
 @page "/pages/mytrip"
-
-<div class="main" >
+@using CleanArchitecture.Blazor.Application.Features.TripReports.DTOs;
+@using CleanArchitecture.Blazor.Application.Features.TripReports.Queries.GetById;
+@inherits FluxorComponent
+@attribute [Authorize(Policy = Permissions.TripReports.MyTripView)]
+<div class="main">
     <MudContainer MaxWidth="MaxWidth.Small">
-        <MudPaper  Width="100%" Square="true">
+        <MudPaper Width="100%" Square="true">
             <MudList Clickable="true">
                 <MudListSubheader>
                     <MudStack Row="true" Class="align-center justify-space-between">
                         <MudIcon Icon="@Icons.Material.Filled.Timeline"></MudIcon>
                         <h3>My Trip</h3>
                         <MudTooltip Text="@L["Just show runing"]">
-                        <MudSwitch @bind-Checked="@justruning" Color="Color.Primary" />
+                            <MudSwitch T="bool" Checked="@justruning" Color="Color.Primary" CheckedChanged="CheckedChanged" />
                         </MudTooltip>
                     </MudStack>
-                  
+
                 </MudListSubheader>
-                <MudListItem Class="d-flex flex-row align-center">
-                    <div class="d-flex flex-row align-center">
-                        <MudTooltip Text="@L["Runing"]">
-                            <MudIcon Icon="@Icons.Material.Filled.DirectionsRun" Color="Color.Primary" Size="Size.Large"></MudIcon>
-                        </MudTooltip>
-                       
-                        <div class="d-flex flex-column ml-2 flex-grow-1">
-                            <MudText Typo="Typo.body2" Class="mud-text-primary"> Coal Road - Bluff Street </MudText>
-                            <MudText Typo="Typo.body2" Class="mud-text-secondary"> Time: 7:00 - 9:00 </MudText>
-                        </div>
-                        <div class="d-flex flex-column ml-2 align-center justify-center">
-                            <MudText Typo="Typo.body2"> On Board </MudText>
-                            <MudText Typo="Typo.body2" Class="mud-text-secondary"> 10 </MudText>
-                        </div>
-                    </div>
-                    
-                </MudListItem>
-                @if (!justruning)
+                @if (_loading)
                 {
-                    <MudListItem Class="d-flex flex-row align-center">
-                        <div class="d-flex flex-row align-center">
-                            <MudTooltip Text="@L["Finished"]">
-                                <MudIcon Icon="@Icons.Material.Filled.TagFaces" Color="Color.Success" Size="Size.Large"></MudIcon>
-                            </MudTooltip>
-                            <div class="d-flex flex-column ml-2 flex-grow-1">
-                                <MudText Typo="Typo.body2" Class="mud-text-primary"> Coal Road - Bluff Street </MudText>
-                                <MudText Typo="Typo.body2" Class="mud-text-secondary"> Time: 7:00 - 9:00 </MudText>
-                            </div>
-                            <div class="d-flex flex-column ml-2 align-center justify-center">
-                                <MudText Typo="Typo.body2"> On Board </MudText>
-                                <MudText Typo="Typo.body2" Class="mud-text-secondary"> 10 </MudText>
-                            </div>
-                        </div>
-
-                    </MudListItem>
-                    <MudListItem Class="d-flex flex-row align-center">
-                        <div class="d-flex flex-row align-center">
-                        <MudTooltip Text="@L["Finished"]">
-                            <MudIcon Icon="@Icons.Material.Filled.TagFaces" Color="Color.Success" Size="Size.Large"></MudIcon>
-                        </MudTooltip>
-                        <div class="d-flex flex-column ml-2 flex-grow-1">
-                            <MudText Typo="Typo.body2"> Coal Road - Bluff Street </MudText>
-                            <MudText Typo="Typo.body2" Class="mud-text-secondary"> Time: 7:00 - 9:00 </MudText>
-                        </div>
-                        <div class="d-flex flex-column ml-2 align-center justify-center">
-                            <MudText Typo="Typo.body2"> On Board </MudText>
-                            <MudText Typo="Typo.body2" Class="mud-text-secondary"> 10 </MudText>
-                        </div>
-                    </div>
-
-                </MudListItem>
+                    <TripItemSkeleton Loading="@_loading"></TripItemSkeleton>
+                }
+                else
+                {
+                    @if (tripList == null || !tripList.Any())
+                    {
+                        <TripItemBlank></TripItemBlank>
+                    }
+                    else
+                    {
+                        @foreach (var trip in tripList)
+                        {
+                            <TripItem Trip="@trip"></TripItem>
+                        }
+                    }
                 }
             </MudList>
         </MudPaper>
@@ -77,11 +46,72 @@
     <MudTooltip Text="@L["Home"]">
         <MudIconButton Icon="@Icons.Material.Filled.Home" Class="mx-1" Size="Size.Large" Color="Color.Inherit" Edge="Edge.End" />
     </MudTooltip>
-    <MudTooltip Text="@L["Create a trip"]"><MudIconButton Icon="@Icons.Material.Filled.Add" Class="mx-1" Size="Size.Large" Color="Color.Inherit" Edge="Edge.End" /></MudTooltip>
+    <MudTooltip Text="@L["Create a trip"]"><MudIconButton Icon="@Icons.Material.Filled.Add" Class="mx-1" Size="Size.Large" Color="Color.Inherit" Edge="Edge.End" Href="/pages/createtrip" /></MudTooltip>
     <MudTooltip Text="@L["Create a accident"]"><MudIconButton Icon="@Icons.Material.Filled.AddAlert" Class="mx-1" Size="Size.Large" Color="Color.Inherit" Edge="Edge.End" /></MudTooltip>
-  
+
     <MudSpacer />
 </MudAppBar>
 @code {
     bool justruning = false;
+    bool _loading = false;
+    [Inject]
+    private IState<UserProfileState> UserProfileState { get; set; } = null!;
+    private UserProfile UserProfile => UserProfileState.Value.UserProfile;
+    GetTripReportByUserQueryQuery query = new();
+    List<TripReportDto>? tripList = null;
+    [Inject]
+    private IMediator Mediator { get; set; } = default!;
+    protected override async Task OnInitializedAsync()
+    {
+        UserProfileState.StateChanged += StateOnStateChanged;
+        if (!UserProfileState.Value.IsLoading && !string.IsNullOrEmpty(UserProfileState.Value.UserProfile.UserId))
+        {
+            await LoadTrip();
+        }
+    }
+    async void CheckedChanged(bool x)
+    {
+
+        if (x)
+        {
+            query.Status = TripStatus.Runing;
+        }
+        else
+        {
+            query.Status = null;
+        }
+        await LoadTrip();
+        justruning = x;
+        StateHasChanged();
+    }
+    private async Task LoadTrip()
+    {
+        try
+        {
+            _loading = true;
+            query.UserProfile = UserProfile;
+            tripList = await Mediator.Send(query);
+        }
+        finally
+        {
+            _loading = false;
+        }
+    }
+    protected override void Dispose(bool disposing)
+    {
+        UserProfileState.StateChanged -= StateOnStateChanged;
+        base.Dispose(disposing);
+    }
+    private void StateOnStateChanged(object? sender, EventArgs args)
+    {
+        InvokeAsync(async () =>
+        {
+            if (!UserProfileState.Value.IsLoading && !string.IsNullOrEmpty(UserProfileState.Value.UserProfile.UserId))
+            {
+                query.UserProfile = UserProfile;
+                await LoadTrip();
+                StateHasChanged();
+            }
+        });
+    }
 }
